chore: setup ggshield secret scanning, fix contrast issue, remove hardcoded credentials

--- a/Code/Landingpage/Landingpage.Web/Components/Layout/ReconnectModal.razor.css
+++ b/Code/Landingpage/Landingpage.Web/Components/Layout/ReconnectModal.razor.css
@@ -90,7 +90,7 @@
 
 #components-reconnect-modal button {
     border: 0;
-    background-color: #6b9ed2;
+    background-color: #3671a8;
     color: #ffffff;
     padding: 4px 24px;
     border-radius: 4px;
